# davraw9705

./: .gitignore  CHANGELOG.md  func.py  main.py  pyproject.toml
davraw9705/: _version.py  cli.py  convertrawfile.py  files.py  func.py  logger.py  main.py  plots.py  readrawfile.py  setup.py  stats.py
davraw9705/calibration_factors/: calibration_vs_profile.py
info/: 00-README.txt
info/example_script_IRGA62_manual/: from_manual.txt
info/original_script_WE/: locations.table_CH-DAV_20100323.txt
info/original_script_WE/wsl2cdef.V1.8/: Davos050807_01.cdef  Davos050807_01.raw  wsl2cdef.V1.8
info/original_script_WE/wsl2cdef.V1.8/aux_file/: Davos050807_02.aux
info/original_script_WE/wsl2cdef.V1.9/: wsl2cdef.V1.9
